work in progress, added github actions

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "haru",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
@@ -58,12 +58,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
