--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,10 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "baseUrl": "./src",
+    "rootDir": "./",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
